--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc_driverClassName = oracle.jdbc.driver.OracleDriver
 jdbc_url = jdbc:oracle:thin:@127.0.0.1:1521:orcl
-jdbc_username = sjjs_b
+jdbc_username = expression
 jdbc_password = orcl
