--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
 			<version>${spring.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>aopalliance</groupId>
+			<artifactId>aopalliance</artifactId>
+			<version>1.0</version>
+		</dependency>
+
 		<!-- mysql驱动包 -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -89,12 +95,6 @@
 			<version>${mysql.version}</version>
 		</dependency>
 
-		<!-- oracle驱动包 -->
-		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>11.2.0.1.0</version>
-		</dependency>
 
 		<!-- druid连接池 jar -->
 		<dependency>
@@ -180,6 +180,14 @@
 			<artifactId>mybatis-generator-core</artifactId>
 			<version>1.3.5</version>
 		</dependency>
+
+		<!-- mybatis分页 -->
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>5.1.4</version>
+		</dependency>
+
 
 		<!-- ecache 缓存 -->
 		<dependency>
