--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 #\u6570\u636e\u5e93\u914d\u7f6e
-jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/expression?useUnicode=true&characterEncoding=utf-8
-jdbc.username = root
-jdbc.password = 123456
+#jdbc.driverClassName = com.mysql.jdbc.Driver
+#jdbc.url = jdbc:mysql://localhost:3306/expression?useUnicode=true&characterEncoding=utf-8
+#jdbc.username = root
+#jdbc.password = 123456
 
+jdbc.driverClassName = oracle.jdbc.driver.OracleDriver
+jdbc.url = jdbc:oracle:thin:@localhost:1521:orcl
+jdbc.username = expression
+jdbc.password = orcl
 
 #\u6570\u636e\u5e93\u8fde\u63a5\u6c60\u914d\u7f6e
 #\u521d\u59cb\u8fde\u63a5\u6570
