--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,11 @@
 			<artifactId>freemarker</artifactId>
 			<version>2.3.23</version>
 		</dependency>
+		<dependency>
+			<groupId>net.mingsoft</groupId>
+			<artifactId>shiro-freemarker-tags</artifactId>
+			<version>0.1</version>
+		</dependency>
 		<!-- Junit -->
 		<dependency>
 			<groupId>junit</groupId>
