--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@
 #jdbc.password = 123456
 
 jdbc.driverClassName = oracle.jdbc.driver.OracleDriver
-jdbc.url = jdbc:oracle:thin:@localhost:1521:orcl
-jdbc.username = expression
-jdbc.password = orcl
+jdbc.url = jdbc:oracle:thin:@127.0.0.1:1521:orcl
+jdbc.username = efdc
+jdbc.password = efdc
 
 #\u6570\u636e\u5e93\u8fde\u63a5\u6c60\u914d\u7f6e
 #\u521d\u59cb\u8fde\u63a5\u6570
