异常打印调整

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,11 +31,12 @@ jdbc.pool.testOnReturn=false
 #\u6d4b\u8bd5\u8fde\u63a5\u8bed\u53e5
 jdbc.pool.validationQuery=SELECT 1 FROM DUAL
 #\u914d\u7f6e\u76d1\u63a7\u7edf\u8ba1\u62e6\u622a\u7684filters
-jdbc.pool.filters = wall,stat
+jdbc.pool.filters = wall,stat,slf4j
 #\u5f00\u542f\u6e38\u6807\u7f13\u5b58
 jdbc.pool.poolPreparedStatements = true
 \u6e38\u6807\u7f13\u5b58\u5927\u5c0f
 jdbc.pool.maxPoolPreparedStatementPerConnectionSize = 512
+
 
 
 #mybatis \u626b\u63cfxml\u8def\u5f84
