--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
 		<spring.version>4.1.6.RELEASE</spring.version>
 		<mybatis.version>3.4.1</mybatis.version>
 		<slf4j.version>1.6.6</slf4j.version>
-		<log4j.version>1.2.12</log4j.version>
 		<mysql.version>5.1.35</mysql.version>
 		<fastjson.version>1.2.46</fastjson.version>
 	</properties>
@@ -138,7 +137,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.6.4</version>
+			<version>1.7.16</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -210,11 +209,6 @@
 			<version>1.2.4</version>
 		</dependency>
 
-		<!--  <dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.12</version>
-		</dependency> -->
 
 		<!-- 添加shrio-web支持 -->
 		<dependency>
@@ -252,6 +246,12 @@
 			<groupId>net.mingsoft</groupId>
 			<artifactId>shiro-freemarker-tags</artifactId>
 			<version>0.1</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>log4j</artifactId>
+					<groupId>log4j</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- Junit -->
 		<dependency>
