--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@
 
 jdbc.driverClassName = oracle.jdbc.driver.OracleDriver
 jdbc.url = jdbc:oracle:thin:@127.0.0.1:1521:orcl
-jdbc.username = expression
-jdbc.password = expression
+jdbc.username = efdc
+jdbc.password = efdc
 
 #\u6570\u636e\u5e93\u8fde\u63a5\u6c60\u914d\u7f6e
 #\u521d\u59cb\u8fde\u63a5\u6570
