--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@
 #jdbc.password = 123456
 
 jdbc.driverClassName = oracle.jdbc.driver.OracleDriver
+#jdbc.url = jdbc:oracle:thin:@172.16.3.22:1521:orcl
+#jdbc.username = EFDC
+#jdbc.password = rpforjqdb603
+
 jdbc.url = jdbc:oracle:thin:@127.0.0.1:1521:orcl
 jdbc.username = efdc
 jdbc.password = efdc
