快报新分支

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#\u6570\u636e\u5e93\u914d\u7f6e
+#\u6570\u636E\u5E93\u914D\u7F6E
 #jdbc.driverClassName = com.mysql.jdbc.Driver
 #jdbc.url = jdbc:mysql://localhost:3306/expression?useUnicode=true&characterEncoding=utf-8
 #jdbc.username = root
@@ -9,41 +9,41 @@ jdbc.driverClassName = oracle.jdbc.driver.OracleDriver
 #jdbc.username = EFDC
 #jdbc.password = rpforjqdb603
 
-jdbc.url = jdbc:oracle:thin:@127.0.0.1:1521:orcl
+jdbc.url = jdbc:oracle:thin:@172.16.3.27:1521:orcl
 jdbc.username = efdc
 jdbc.password = efdc
 
-#\u6570\u636e\u5e93\u8fde\u63a5\u6c60\u914d\u7f6e
-#\u521d\u59cb\u8fde\u63a5\u6570
+#\u6570\u636E\u5E93\u8FDE\u63A5\u6C60\u914D\u7F6E
+#\u521D\u59CB\u8FDE\u63A5\u6570
 jdbc.pool.initialSize = 10
-#\u6700\u5c0f\u8fde\u63a5\u6570
+#\u6700\u5C0F\u8FDE\u63A5\u6570
 jdbc.pool.minIdle = 10
-#\u6700\u5927\u8fde\u63a5\u6570
+#\u6700\u5927\u8FDE\u63A5\u6570
 jdbc.pool.maxActive = 50
-#\u83b7\u53d6\u8fde\u63a5\u7b49\u5f85\u8d85\u65f6\u65f6\u95f4\uff0c\u5355\u4f4d\u662f\u6beb\u79d2
+#\u83B7\u53D6\u8FDE\u63A5\u7B49\u5F85\u8D85\u65F6\u65F6\u95F4\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
 jdbc.pool.maxWait = 60000
-#\u914d\u7f6e\u95f4\u9694\u591a\u4e45\u624d\u8fdb\u884c\u4e00\u6b21\u68c0\u6d4b\uff0c\u68c0\u6d4b\u9700\u8981\u5173\u95ed\u7684\u7a7a\u95f2\u8fde\u63a5\uff0c\u5355\u4f4d\u662f\u6beb\u79d2
+#\u914D\u7F6E\u95F4\u9694\u591A\u4E45\u624D\u8FDB\u884C\u4E00\u6B21\u68C0\u6D4B\uFF0C\u68C0\u6D4B\u9700\u8981\u5173\u95ED\u7684\u7A7A\u95F2\u8FDE\u63A5\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
 jdbc.pool.timeBetweenEvictionRunsMillis = 60000
-#\u914d\u7f6e\u4e00\u4e2a\u8fde\u63a5\u5728\u6c60\u4e2d\u6700\u5c0f\u751f\u5b58\u7684\u65f6\u95f4\uff0c\u5355\u4f4d\u662f\u6beb\u79d2
+#\u914D\u7F6E\u4E00\u4E2A\u8FDE\u63A5\u5728\u6C60\u4E2D\u6700\u5C0F\u751F\u5B58\u7684\u65F6\u95F4\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
 jdbc.pool.minEvictableIdleTimeMillis = 300000
-#\u9a8c\u8bc1\u8fde\u63a5\u7684\u6709\u6548\u6027
+#\u9A8C\u8BC1\u8FDE\u63A5\u7684\u6709\u6548\u6027
 jdbc.pool.testWhileIdle=true
-#\u83b7\u53d6\u8fde\u63a5\u65f6\u5019\u9a8c\u8bc1\uff0c\u4f1a\u5f71\u54cd\u6027\u80fd
+#\u83B7\u53D6\u8FDE\u63A5\u65F6\u5019\u9A8C\u8BC1\uFF0C\u4F1A\u5F71\u54CD\u6027\u80FD
 jdbc.pool.testOnBorrow=false
-#\u5728\u8fde\u63a5\u5f52\u8fd8\u5230\u8fde\u63a5\u6c60\u65f6\u662f\u5426\u6d4b\u8bd5\u8be5\u8fde\u63a5
+#\u5728\u8FDE\u63A5\u5F52\u8FD8\u5230\u8FDE\u63A5\u6C60\u65F6\u662F\u5426\u6D4B\u8BD5\u8BE5\u8FDE\u63A5
 jdbc.pool.testOnReturn=false
-#\u6d4b\u8bd5\u8fde\u63a5\u8bed\u53e5
+#\u6D4B\u8BD5\u8FDE\u63A5\u8BED\u53E5
 jdbc.pool.validationQuery=SELECT 1 FROM DUAL
-#\u914d\u7f6e\u76d1\u63a7\u7edf\u8ba1\u62e6\u622a\u7684filters
+#\u914D\u7F6E\u76D1\u63A7\u7EDF\u8BA1\u62E6\u622A\u7684filters
 jdbc.pool.filters = wall,stat,slf4j
-#\u5f00\u542f\u6e38\u6807\u7f13\u5b58
+#\u5F00\u542F\u6E38\u6807\u7F13\u5B58
 jdbc.pool.poolPreparedStatements = true
-\u6e38\u6807\u7f13\u5b58\u5927\u5c0f
+\u6E38\u6807\u7F13\u5B58\u5927\u5C0F
 jdbc.pool.maxPoolPreparedStatementPerConnectionSize = 512
 
 
 
-#mybatis \u626b\u63cfxml\u8def\u5f84
+#mybatis \u626B\u63CFxml\u8DEF\u5F84
 mybatis.mapperLocations = classpath*:priv/yulong/**/mapper/*Mapper.xml
 
 shiroFilter.loginUrl = /login
