--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ jdbc.driverClassName = oracle.jdbc.driver.OracleDriver
 #jdbc.username = EFDC
 #jdbc.password = rpforjqdb603
 
-jdbc.url = jdbc:oracle:thin:@172.16.3.27:1521:orcl
+jdbc.url = jdbc:oracle:thin:@//130.1.11.249:1521/orclcmis
 jdbc.username = efdc
 jdbc.password = efdc
 
