--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ jdbc.driverClassName = oracle.jdbc.driver.OracleDriver
 #jdbc.password = rpforjqdb603
 
 jdbc.url = jdbc:oracle:thin:@//130.1.11.249:1521/orclcmis
+#jdbc.url = jdbc:oracle:thin:@172.16.3.27:1521:orcl
 jdbc.username = efdc
 jdbc.password = efdc
 
